- Implement logic for card student widget

--- a/desktop_app/ui/widgets/card_student_info.ui
+++ b/desktop_app/ui/widgets/card_student_info.ui
@@ -27,14 +27,31 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="degree_type_label">
-       <property name="text">
-        <string>Degree type</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignmentFlag::AlignCenter</set>
-       </property>
-      </widget>
+      <layout class="QHBoxLayout" name="horizontalLayout_3">
+       <item>
+        <widget class="QPushButton" name="info_preview_button">
+         <property name="maximumSize">
+          <size>
+           <width>35</width>
+           <height>16777215</height>
+          </size>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="degree_type_label">
+         <property name="text">
+          <string>Degree type</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignmentFlag::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
    </item>
