- Implement update student logic - Optimisation & fixes

--- a/desktop_app/ui/windows/student_register_info/student_register_info.ui
+++ b/desktop_app/ui/windows/student_register_info/student_register_info.ui
@@ -65,7 +65,7 @@
            <enum>QAbstractSpinBox::ButtonSymbols::NoButtons</enum>
           </property>
           <property name="displayFormat">
-           <string>dd/MM/yyyy</string>
+           <string>dd_MM_yyyy</string>
           </property>
          </widget>
         </item>
