--- a/desktop_app/ui/windows/login/login.ui
+++ b/desktop_app/ui/windows/login/login.ui
@@ -6,12 +6,57 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>367</width>
-    <height>356</height>
+    <width>380</width>
+    <height>500</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>380</width>
+    <height>500</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>380</width>
+    <height>500</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">#Login {
+	font: 12pt &quot;Noto Sans&quot;;
+}
+
+#title {
+	font: 700 30pt &quot;Noto Sans&quot;;
+	padding: 35px
+}
+
+#username_input, #password_input, #login_button {
+	border: 1px solid  rgb(0, 94, 193);
+	border-radius: 10px;
+	padding: 10px;
+	selection-color: rgb(255, 255, 255);
+}
+
+#login_button {
+	background-color: rgb(0, 94, 193);
+	color: rgb(255, 255, 255);
+}
+
+#login_button::hover {
+	
+	background-color: #0066cc;
+	color: rgb(255, 255, 255);
+}
+
+#forget_password_link {
+	color: rgb(0, 94, 193);
+	border: none;
+}</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -31,7 +76,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="title">
         <property name="text">
          <string>LOGIN</string>
         </property>
@@ -80,6 +125,9 @@
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QPushButton" name="forget_password_link">
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
         <property name="text">
          <string>forget password ?</string>
         </property>
@@ -111,6 +159,12 @@
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
+ <tabstops>
+  <tabstop>username_input</tabstop>
+  <tabstop>password_input</tabstop>
+  <tabstop>login_button</tabstop>
+  <tabstop>forget_password_link</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
