--- a/desktop_app/ui/windows/restore_password/restore_password.ui
+++ b/desktop_app/ui/windows/restore_password/restore_password.ui
@@ -6,12 +6,51 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>367</width>
-    <height>356</height>
+    <width>380</width>
+    <height>500</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>380</width>
+    <height>500</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>380</width>
+    <height>500</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">#ForgetPassword {
+	font: 12pt &quot;Noto Sans&quot;;
+}
+
+#title {
+	font: 700 25pt &quot;Noto Sans&quot;;
+	padding: 35px
+}
+
+#username_input, #password_input, #return_button {
+	border: 1px solid  rgb(0, 94, 193);
+	border-radius: 10px;
+	padding: 10px;
+	selection-color: rgb(255, 255, 255);
+}
+
+#return_button {
+	background-color: rgb(0, 94, 193);
+	color: rgb(255, 255, 255);
+}
+
+#return_button::hover {
+	background-color: #0066cc;
+	color: rgb(255, 255, 255);
+}</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -31,7 +70,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="title">
         <property name="text">
          <string>Forget Password </string>
         </property>
@@ -62,12 +101,12 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QLineEdit" name="lineEdit">
+       <widget class="QLineEdit" name="username_input">
         <property name="enabled">
          <bool>true</bool>
         </property>
         <property name="text">
-         <string>Admin</string>
+         <string>admin</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -85,12 +124,12 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QLineEdit" name="lineEdit_2">
+       <widget class="QLineEdit" name="password_input">
         <property name="enabled">
          <bool>true</bool>
         </property>
         <property name="text">
-         <string>Admin</string>
+         <string>admin</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -103,7 +142,7 @@
      </layout>
     </item>
     <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
+     <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,2">
       <item>
        <widget class="QPushButton" name="return_button">
         <property name="text">
